Se implementan los 2 tipos de clientes en su debida lista enlazada con sus métodos básicos de cada clase - No piden que se ingrese en ningún punto específico de la lista por lo que siempre se ingresan al inicio - Tampoco piden que se tengan que eliminar clientes, siempre existen en la "base de datos"

--- a/G-Y-P-Car-Rental/G-Y-P-Car-Rental.vcxproj
+++ b/G-Y-P-Car-Rental/G-Y-P-Car-Rental.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="ClienteJuridico.cpp" />
     <ClCompile Include="ClienteNormal.cpp" />
     <ClCompile Include="Colaborador.cpp" />
+    <ClCompile Include="ContenedorBitacoras.cpp" />
     <ClCompile Include="ContenedorClientes.cpp" />
     <ClCompile Include="ContenedorColaboradores.cpp" />
     <ClCompile Include="ContenedorContratoAlquiler.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="ClienteJuridico.h" />
     <ClInclude Include="ClienteNormal.h" />
     <ClInclude Include="Colaborador.h" />
+    <ClInclude Include="ContenedorBitacoras.h" />
     <ClInclude Include="ContenedorClientes.h" />
     <ClInclude Include="ContenedorColaboradores.h" />
     <ClInclude Include="ContenedorContratoAlquiler.h" />
