--- a/G-Y-P-Car-Rental/G-Y-P-Car-Rental.vcxproj.filters
+++ b/G-Y-P-Car-Rental/G-Y-P-Car-Rental.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Interfaz.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ContenedorBitacoras.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContenedorSucursal.h">
@@ -168,6 +171,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Interfaz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ContenedorBitacoras.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
